{
    "name": "VisualNovelInput",
    "maps": [
        {
            "name": "General",
            "id": "1d27f79a-30a6-4e40-a661-cec03dfcbf1c",
            "actions": [
                {
                    "name": "Next",
                    "type": "Button",
                    "id": "d30ade9e-8f87-4e1e-896d-1dcc24a7164c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HistoryForward",
                    "type": "Button",
                    "id": "1530cad0-0e7a-4c39-8a6e-bfa4e6d10aa4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HistoryBack",
                    "type": "Button",
                    "id": "40ab8dfc-55df-46c5-9a14-e80a58bf80df",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HistoryLogs",
                    "type": "Button",
                    "id": "b6bd192a-a46f-468d-9262-580be092f88b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d6baf9e3-210e-42e2-b0b2-b2157bc351d0",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Next",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9bf050e9-1d95-4174-8a1d-1a59094e7d88",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Next",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fa2affd1-744f-4858-a85f-7d17fefee2a3",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Next",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a8a97067-917c-4524-8a88-824a75c5959c",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HistoryForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4e8e30f2-f5cb-4851-b941-13be760ca98f",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HistoryBack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1467fd1e-c60f-448c-8c5e-b809413a6ad4",
                    "path": "<Keyboard>/backquote",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HistoryLogs",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}